module(
    name = "blenderless",
    version = "",
)

bazel_dep(
    name = "rules_python",
    version = "1.5.1",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bpy",
    build_file = "@blenderless//build_tools:bpy.BUILD.bazel",
    sha256 = "a21124c640bc65b0cff0b17e8d23ad7b7e943a77df802a5f3d643ebf2ab7bc05",
    strip_prefix = "install",
    url = "https://github.com/oqton/blenderless/releases/download/bpy-3.3.6-python3.10/bpy-3.3.6-headless-python3.10-x86_64-linux-gnu.tar.zst",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "blenderless_pip_deps",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "blenderless_pip_deps")
